# orrery

./: .buildinfo  .gitignore  LICENSE.md  MANIFEST.in  README.md  event_driven_architecture.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  pytest.ini  rel_data.csv  relationships.html  search.html  searchindex.js  working_with_ecs.html
_sources/: installation.rst.txt  working_with_ecs.rst.txt
docs/source/: activities.rst  conf.py  design_discussion.rst  event_driven_architecture.rst  index.rst  relationships.rst  working_with_ecs.rst
samples/: addition_removal_detection.py  data_collection.py  demon_slayer.py  initialization_systems.py  location_bias_rules.py  manual_life_events.py  rel_data.csv  sample_01.py  sample_02.py  sample_datacollection.py  server.py  simple_sim.py  simulation_time.py  using_authored_characters.py  using_events.py  using_statuses.py
samples/data/: data.yaml
samples/notebooks/: relationship_growth.ipynb
src/orrery/: __init__.py  __main__.py  actions.py  activity.py  cli.py  config.py  constants.py  content_management.py  data_collection.py  decorators.py  ecs.py  event_callbacks.py  events.py  exporter.py  loaders.py  orrery.py  prefabs.py  relationship.py  server.py  social_rule.py  status.py  statuses.py  systems.py  traits.py  virtues.py
src/orrery/components/: __init__.py  activity.py  business.py  character.py  relationship.py  relationship_status.py  residence.py  settlement.py  shared.py  statuses.py  virtues.py
src/orrery/core/: actions.py  activity.py  ai.py  config.py  ecs.py  event.py  life_event.py  location_bias.py  relationship.py  roles.py  settlement.py  social_rule.py  status.py  time.py  tracery.py  traits.py  virtues.py
src/orrery/core/ecs/: __init__.py  ecs.py  prefab.py  query.py
src/orrery/factories/: __init__.py  activity.py  ai.py  business.py  character.py  shared.py  virtues.py
src/orrery/plugins/default/: ai.py  businesses.py  characters.py  life_events.py  location_bias_rules.py  names.py  residences.py  social_rules.py
src/orrery/plugins/default/data/: activities.yaml  business.default.cafe.yaml  business.default.library.yaml  business.default.yaml  character.default.female.yaml  character.default.yaml  data.yaml  residence.default.house.yaml
src/orrery/utils/: common.py  query.py  relationships.py  statuses.py  traits.py  tratis.py
tests/: test_activity.py  test_config.py  test_ecs.py  test_event.py  test_query.py  test_settlement.py  test_status.py  test_time.py  test_traits.py  test_virtues.py
