[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orrery"
description = "A settlement-scale social simulation framework for games"
authors = [
  { name="Shi Johnson-Bey", email="shijbey@gmail.com" },
]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.8"
keywords = ["social-simulation", "orrery", "games", "simulation"]
license = { file = "LICENSE.md" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Artificial Life",
    "Topic :: Sociology",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "esper",
    "ordered-set",
    "numpy",
    "pyYAML",
    "pydantic == 1.8.2",
    "tracery",
]

[project.urls]
"Homepage" = "https://github.com/ShiJbey/orrery"
"Bug Tracker" = "https://github.com/ShiJbey/orrery/issues"
"Repository" = "https://github.com/ShiJBey/orrery.git"
"Changelog" = "https://github.com/ShiJbey/orrery/blob/main/CHANGELOG.md"

[project.scripts]
orrery = "orrery.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "orrery.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
